- massive change ( validate errors warrings from desktop-file-validate)   - sed -i 's,Encoding=UTF-8,,g' *.desktop   - sed -i "s,.png,,1" `grep -l 'Icon=[^/].*\.png' *.desktop`   - sed -i "s,MimeType=.*,\0;,g" `grep "MimeType.*semicolon" validate |awk '{print $1}' |tr ":" " "`   - sed -i 's,MapNotify=.*,,g' *.desktop   - sed -i '/^$/d' *.desktop - not all error/warrings validated
Changed files:
    VirtualBox.desktop -> 1.2

--- a/VirtualBox.desktop
+++ b/VirtualBox.desktop
@@ -4,8 +4,7 @@ Type=Application
 Comment=VirtualBox
 Comment[pl]=VirtualBox
 Exec=VirtualBox
-Icon=VBox.png
+Icon=VBox
 Terminal=false
 Categories=Utility;Emulator;
-Encoding=UTF-8
 # vi: encoding=utf-8
