update comment with new autostart db path

--- a/autostart.cfg
+++ b/autostart.cfg
@@ -1,7 +1,7 @@
 # To autostart vms, you need to do the following (as user):
 #
 # 1. set autostart dbpath:
-# $ VBoxManage setproperty autostartdbpath /etc/vbox
+# $ VBoxManage setproperty autostartdbpath /etc/vbox/autostart
 # 2. set autostart enabled
 # $ VBoxManage modifyvm  <uuid|vmname> --autostart-enabled on
 
