- blacklist kvm_* Intel VT-x/AMD-V extensions kernel modules for host
VBox will not start VMs when these modules are present:

VirtualBox can't operate in VMX root mode.
Please disable the KVM kernel extension,
recompile your kernel and reboot (VERR_VMX_IN_VMX_ROOT_MODE).

--- a/VirtualBox-virtualbox-host-modules-load.conf
+++ b/VirtualBox-virtualbox-host-modules-load.conf
@@ -1,3 +1,7 @@
 vboxdrv
 vboxnetadp
 vboxnetflt
+# VirtualBox can't operate in VMX root mode.
+# Please disable the KVM kernel extension (VERR_VMX_IN_VMX_ROOT_MODE).
+blacklist kvm_amd
+blacklist kvm_intel
